everything before ESP broke

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -3,6 +3,7 @@ idf_component_register(
         hello_world_main.cpp
         webserver.cpp
         image_processing.cpp
+        camera.cpp
     INCLUDE_DIRS 
         .
         ./opencv)
