usb_stream files for recording images and saving them to PC when receiver3.py is running on the PC.

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -4,6 +4,7 @@ idf_component_register(
         webserver.cpp
         image_processing.cpp
         camera.cpp
+        usb_stream.cpp
     INCLUDE_DIRS 
         .
         ./opencv)
