comment out camera image capture, instead we use captured_image_1748952173.png in the spiffs partition. can now start implementation of image processing pipeline from py

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -38,4 +38,4 @@ set(OPENCV_DEP  opencv_imgcodecs opencv_imgproc opencv_core)
 target_link_libraries(${COMPONENT_LIB} ${OPENCV_DEP})
 
 # create spiffs partition (named 'storage') from the ../spiffs_image directory
-# spiffs_create_partition_image(storage ../spiffs_images FLASH_IN_PROJECT)
+ spiffs_create_partition_image(storage ../spiffs_images FLASH_IN_PROJECT)
