implement the code from segment opencv-pc respository

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -5,6 +5,7 @@ idf_component_register(
         image_processing.cpp
         camera.cpp
         usb_stream.cpp
+        zhangsuen.cpp
     INCLUDE_DIRS 
         .
         ./opencv)
